Add Privacy Policy section to all language versions
- Add comprehensive privacy policy stating no data collection
- Emphasize offline functionality and user privacy
- Update site titles to include Privacy Policy
- Available in all 11 supported languages
- Ready for App Store Connect privacy policy URL

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: MinuteRepeater
-description: A virtual minute repeater app for iOS and Apple Watch
+description: A virtual minute repeater app for iOS and Apple Watch - Privacy Policy
 theme: minima
 languages: ["en", "zh", "ja", "fr", "de", "es", "ru", "ko", "pt", "it", "ar"]
 default_lang: "en"
